--- a/demo2/index.html
+++ b/demo2/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-
 <div class="wrap">
 
     <h2> Widgest</h2>
@@ -17,6 +16,7 @@
 <div class="father">
     <div class="box">
         <h2>Big Widgest</h2>
+
     </div>
     <div class="box">
         <h2>Bigger Widgest</h2>
@@ -25,6 +25,9 @@
         <h2>Huge Widgest</h2>
     </div>
 
+</div>
+<div class="target">
+<h2>Contact</h2>
 </div>
 
 
